--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,17 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+うじゃうじゃ駄文。</font><br></td><td align="center" width="200">
+2025年8月11日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+生活リズムが終わっていて寝れないので、Misskeyでしてない話でも。<s>身バレが怖いのよ。</s>
+どういう成り行きか友人に釣られ、近所巡回用の原付スクーターでレースに出てボコボコにされたり、<br>
+Ass〇ttoC〇rsa用に作っている免許セ〇ターMOD用の資料を探して図書館に行って、昔あった発電所の写真を探し回ったり、色々してます。<br>
+免〇センターMODは7割ぐらい完成したかな。あとは背景の建物をでっち上げるだけ(^^;（作業量が多くこれまた問題なのだが。）<br>
+愛媛ー東京、原付旅行記はボチボチ書いているので、書き終わったら何処かで公開しようかな。<br>
+P.S.トプ画を久々に描いてみたけど、やっぱ描けねーや…。（hometop03のリメイクだけど、標識以外03の方がそれっぱかったかも。頭身が安定しない。）
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 東京に行って来ました。原チャで。</font><br></td><td align="center" width="200">
 2025年7月12日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 ついうっかり書き込みを忘れていたが、行って帰ってきました。<br>
