--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
 <FONT SIZE=-3>みずちーさんのHP</FONT><f><br><br>
 <img alt="03のセルフリメイク やっぱり某M坂の幽霊トンネル"src="https://mizutisann.github.io/HP/img/home/hometop06.png" border="0" width="512" height="256"><br>
 <!-- 02.png 謎のうちの子2　持ってるのはMSXのつもり--><!-- 03.png カナ・アナベラルのつもり 背景は今や面影も無い某M峠の幽霊トンネル--><!-- 04.png 辰だけに辰巳PA(^^;、謎のうちの子とエスハチ--><!-- 05.png 歩度調整する謎のうちの子、この繪を書いた数時間後にゼンマイが切れ不動に…。--><!-- 06.png jjjj-->
+　　　　　　　　　　　　　　　　　　　Since 2022.4 ～<br>
 <FONT SIZE=-3>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</FONT><br><br>
 <a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://mizutisann.github.io/HP/img/home/syoukai0.png"  onmouseover="this.src='https://mizutisann.github.io/HP/img/home/syoukai1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/syoukai0.png'" border="0" width="256" height="32">
 </a><FONT SIZE=-3 COLOR=#999999>  最終更新日：2024年7月12日</FONT><br>
@@ -44,11 +45,10 @@
 misskey.io / @mizutisann<br>
 Discord / mizutisann_6806<br>
 Twitter / mizutisann<br>
-<br>
-<a href="https://mizutisann.github.io/HP/top"><img alt="バナー"  src="https://mizutisann.github.io/HP/img/banner-tuzura.png" width="200" height="40" border="0"><br></a>クリックでトップへ
+<br><hr>
+ブックマーク、リンク等はこのページにお願いします。<FONT SIZE=-3 COLOR=#999999>まあ HP/top のままでもいいけど。</FONT><br><br>
+当ペエジは、横1000pxぐらいで見ることを想定してます。多分。
+<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png width="200" height="40" border="0"><br>
 </DIV>
-</body>
-</html>
-</div>
 </body>
 </html>
