--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
   
 <a href="http://mizutisann.starfree.jp/potiboard5/index.html"><img alt="懐古的繪描板"  src="https://mizutisann.github.io/HP/img/home/oekakibbs0.png" onmouseover="this.src='https://mizutisann.github.io/HP/img/home/oekakibbs1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/oekakibbs0.png'" border="0" width="256" height="32">
 </a><FONT SIZE=-3 COLOR=#999999>  最終更新日：2024年7月17日</FONT><br>
-<FONT COLOR=#999999>お絵描き掲示板。</FONT><br>
+<FONT COLOR=#999999>お絵描き掲示板。現在無期限停止中。</FONT><br>
   
 <a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://mizutisann.github.io/HP/img/home/link0.png" onmouseover="this.src='https://mizutisann.github.io/HP/img/home/link1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/link0.png'" border="0" width="256" height="32">
 </a><FONT SIZE=-3 COLOR=#999999>  最終更新日：2024年1月4日</FONT><br>
