--- a/syoukai.html
+++ b/syoukai.html
@@ -41,7 +41,7 @@
     </tr>
         <tr>
       <td width="157" align="center">好きなアニメ</td>
-      <td align="center" width="636">serial experiments lain、ぼっち・ざ・ろっく！、16bitセンセーションAL</td>
+      <td align="center" width="636">serial experiments lain</td>
     </tr>
         <tr>
       <td width="157" align="center">好きなパソコン</td>
@@ -49,7 +49,7 @@
     </tr>
             <tr>
       <td width="157" align="center">好きな車</td>
-      <td align="center" width="636">ホンダ ASシリーズ（特にS800）</td>
+      <td align="center" width="636">ホンダ ASシリーズ（特にS800）、バイクで言うとCR110</td>
     </tr>        <tr>
       <td width="157" align="center">好きな軍事家</td>
       <td align="center" width="636">加藤建夫陸軍少佐</td>
