--- a/syoukai.html
+++ b/syoukai.html
@@ -33,7 +33,7 @@
     </tr>
         <tr>
       <td width="157" align="center">好きな音楽</td>
-      <td align="center" width="636">歌詞の無い曲、ゲームBGMとかが主。FM音源やピアノ、ギターソロなんか好物。ジャズっぽいのも好き。<br>そこそこにP-MODELや平沢進とか。士気高揚で軍歌も聞く。</td>
+      <td align="center" width="636">歌詞の無い曲、ゲームBGMとかが主。FM音源、ピアノソロも好物。<br>ジャズっぽいのも好き。そこそこにP-MODELや平沢進とか。士気高揚で軍歌も聞く。</td>
     </tr>
         <tr>
       <td width="157" align="center">好きなゲエム</td>
