--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,14 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+良くも悪くも腐れ縁</font><br></td><td align="center" width="200">
+2025年11月7日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+友達の入れ替わりが普通の人間と比べて少ないのか、友達は大凡、幼～中時代に出会った奴らのまま過ごしている。<br>
+最近…といっても、もとよりその気はあったのだが、素行が悪すぎて、つるむのが億劫に思う事がある。<br>
+距離を置いても気づけば近くに。良くも悪くも腐れ縁。まあ人生そんなもんか、そんなもんなのか？
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 うじゃうじゃ駄文。</font><br></td><td align="center" width="200">
 2025年8月11日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 生活リズムが終わっていて寝れないので、Misskeyでしてない話でも。<s>身バレが怖いのよ。</s>
