--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,17 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+東京モーターショー</font><br></td><td align="center" width="200">
+2025年11月14日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+日本モビリティショーなんて言いにくいので、今日も東京モーターショー呼び。<br>
+実はシレっと行って来ておりまして。一番感動した車両はペリカンジョグ。ヤマハ所蔵だけあって滅茶苦茶綺麗。<br>
+その次にYS-11のエンジン。時代が時代ならば乗って見たかった。…（現代だと自衛隊に入隊するしか…？）<br>
+日本標板協会ブースはインターネットでよく見た個体を複数見れて良かった。<br>
+韓国中国台湾のメーカーや名前も聞いたことのないメーカー巡りが、まあまあ楽しかった。<br>
+正直東京モーターショーよりも、その後、都内で見た足立34ナンバーのランボルギーニ・ミウラの方が凄かった。(ぉぃ
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 良くも悪くも腐れ縁</font><br></td><td align="center" width="200">
 2025年11月7日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 友達の入れ替わりが普通の人間と比べて少ないのか、友達は大凡、幼～中時代に出会った奴らのまま過ごしている。<br>
