--- a/zakki3.html
+++ b/zakki3.html
@@ -14,7 +14,7 @@
 日本モビリティショーなんて言いにくいので、今日も東京モーターショー呼び。<br>
 実はシレっと行って来ておりまして。一番感動した車両はペリカンジョグ。ヤマハ所蔵だけあって滅茶苦茶綺麗。<br>
 その次にYS-11のエンジン。時代が時代ならば乗って見たかった。…（現代だと自衛隊に入隊するしか…？）<br>
-日本標板協会ブースはインターネットでよく見た個体を複数見れて良かった。<br>
+日本標板協会ブースはインターネットでよく見たナンバープレートを複数見れて良かった。<br>
 韓国中国台湾のメーカーや名前も聞いたことのないメーカー巡りが、まあまあ楽しかった。<br>
 正直東京モーターショーよりも、その後、都内で見た足立34ナンバーのランボルギーニ・ミウラの方が凄かった。(ぉぃ
 <br></td></tr></tbody></table><br><br><br>
