--- a/top.html
+++ b/top.html
@@ -1,27 +1,22 @@
 <html>
 <head>
-  <title>みずちーさんのHP トップ</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+  <title>𧃴折り トップペエジ</title>
 </head>
 
-<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
-<div align="center"><a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
+<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="img/bakg1.png">
+<div align="center"><a href="home.html"><img alt="飾りバー" src="img/kari.png"><br></a>
 <p>　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
 <br>
 <br>
-<a href="https://mizutisann.github.io/HP/home">HOMEへ</a>
-<br>
-<br>
-<h2>きっとこのペエジは</h2>
-<h2>ゲームやPC、車などを扱うHPの</h2>
-<h2>TOPだと思います。(^^;</h2>
-<br>
-<br>
-<h6>ただHPを作りたかっただけとも言う（ぉ</h6>
-<br><hr>
-ブックマーク、リンク等はこのページにお願いします。<br>
-当ペエジは、横1000pxぐらいで見ることを想定してます。多分。
-<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png width="200" height="40" border="0"><br>
+<table border="3">
+<font size="5">~ 𧃴折り ~<br><br>
+<tbody><tr><td bgcolor="#060606">
+<font size="5"><center><b>工事中です。</b><br>工事明けは…令和8年の1月には…。</font></td></tr></tbody></table>
+<br><font size="4">きっとこのペエジは<br>ゲームやPC、車などを扱うホームペエジの<br>トップページだと思います。(^^;</font></center><br><br>
+<a href="home.html">HOMEへ</a><br><br><br><br>
+<font size="3" color="aaaaaa"><hr>ブックマーク、リンク等はこのページにお願いします。<br>
+<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=img/banner-tuzura.png width="200" height="40" border="0"></font><br>
 </DIV>
 </body>
 </html>
+
