--- a/top.html
+++ b/top.html
@@ -4,6 +4,7 @@
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="img/bakg1.png">
+<div align="right"><font size="2" color="aaaaaa">Written in Japanese / 𧃴(Unicode U+270F4)がJIS第3水準の為、環境によっては表示出来ないかも。</font><br><br>
 <div align="center"><a href="home.html"><img alt="飾りバー" src="img/kari.png"><br></a>
 <p>　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
 <br>
@@ -12,11 +13,10 @@
 <font size="5">~ 𧃴折り ~<br><br>
 <tbody><tr><td bgcolor="#060606">
 <font size="5"><center><b>工事中です。</b><br>工事明けは…令和8年の1月には…。</font></td></tr></tbody></table>
-<br><font size="4">きっとこのペエジは<br>ゲームやPC、車などを扱うホームペエジの<br>トップページだと思います。(^^;</font></center><br><br>
+<br><font size="4">きっとこのペエジは<br>ゲームやPC、車などを扱うホームペエジの<br>トップペエジです。(^^;</font></center><br><br>
 <a href="home.html">HOMEへ</a><br><br><br><br>
-<font size="3" color="aaaaaa"><hr>ブックマーク、リンク等はこのページにお願いします。<br>
+<font size="3" color="aaaaaa"><hr>リンク、ブックマークはなるべくこのページにお願いします。<br>
 <br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=img/banner-tuzura.png width="200" height="40" border="0"></font><br>
 </DIV>
 </body>
 </html>
-
