--- a/top.html
+++ b/top.html
@@ -11,8 +11,8 @@
 <table border="3">
 <tbody><tr><td bgcolor="#060606">
 <font size="5"><center><b>工事中です。</b><br>工事明けは…令和8年の1月には…。</font></td></tr></tbody></table>
-<font size="4">きっとこのペエジは<br>ゲームやPC、車などを扱うホームペエジの<br>トップペエジです。(^^;</font></center><br><br>
-<a href="index.html""HOMEへ</a><br><br><br><br>
+<font size="4">きっとこのペエジは<br>ゲームやPC、車などを扱うホームペエジの<br>トップペエジです。(^^;</center><br><br>
+<a href="index.html""HOMEへ</a><br><br><br><br></font>
 <font size="3" color="aaaaaa"><hr>リンク、ブックマークはなるべくこのページにお願いします。<br>
 <br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=img/banner-tuzura.png width="200" height="40" border="0"></font><br>
 </DIV>
