--- a/top.html
+++ b/top.html
@@ -1,18 +1,19 @@
 <html>
 <head>
   <title>𧃴折り トップペエジ</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="img/bakg1.png">
 <div align="right"><font size="1" color="aaaaaa">Written in Japanese / 𧃴(Unicode U+270F4)がJIS第3水準の為、環境によっては表示出来ないかも。</font><br><br>
-<div align="center"><a href="index.html"><img alt="飾りバー" src="img/kari.png"><br></a>
+<div align="center"><a href="home.html"><img alt="飾りバー" src="img/kari.png"><br></a>
 <font size="2"><p>　　　　　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
 <br><br><font size="5">~ 𧃴折り ~</font><br><br>
 <table border="3">
 <tbody><tr><td bgcolor="#060606">
 <font size="5"><center><b>工事中です。</b><br>工事明けは…令和8年の1月には…。</font></td></tr></tbody></table>
-<font size="4">きっとこのペエジは<br>ゲームやPC、車などを扱うホームペエジの<br>トップペエジです。(^^;</center><br><br>
-<a href="index.html""HOMEへ</a><br><br><br><br></font>
+<font size="4">きっとこのペエジは<br>ゲームやPC、車などを扱うホームペエジの<br>トップペエジです。(^^;</font></center><br><br>
+<a href="home.html">HOMEへ</a><br><br><br><br>
 <font size="3" color="aaaaaa"><hr>リンク、ブックマークはなるべくこのページにお願いします。<br>
 <br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=img/banner-tuzura.png width="200" height="40" border="0"></font><br>
 </DIV>
