--- a/index.html
+++ b/index.html
@@ -1,39 +1,21 @@
 <html>
 <head>
-  <title>𧃴折り HOME</title>
+  <title>𧃴折り トップペエジ</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 
-<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
-<div align="center">
-<H2>𧃴折り</H2>
-<img alt="03のセルフリメイク やっぱり某M坂の幽霊トンネル"src="img/home/hometop06.png" border="0" width="512" height="256"><br>
-<!-- 02.png 謎のうちの子2　持ってるのはMSXのつもり--><!-- 03.png カナ・アナベラルのつもり 背景は今や面影も無い某M峠の幽霊トンネル--><!-- 04.png 辰だけに辰巳PA(^^;、謎のうちの子とエスハチ--><!-- 05.png 歩度調整する謎のうちの子、この繪を書いた数時間後にゼンマイが切れ不動に…。--><!-- 06.png jjjj-->
-<FONT SIZE=-3>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</FONT><br><br>
-<a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="img/home/syoukai0.png"  onmouseover="this.src='img/home/syoukai1.png'" onmouseout="this.src='img/home/syoukai0.png'" border="0" width="256" height="32">
-</a><FONT SIZE=-3 COLOR=#999999>最終更新日：2026年1月3日</FONT><br>
-<FONT COLOR=#999999>雑な自己紹介。</FONT><br>
-  
-<a href="https://mizutisann.github.io/HP/zakki"><img alt="雑記"  src="img/home/zakki0.png" onmouseover="this.src='img/home/zakki1.png'" onmouseout="this.src='img/home/zakki0.png'" border="0" width="256" height="32">
-</a><FONT SIZE=-3 COLOR=#999999>最終更新日：2026年1月3日</FONT><br>
-<FONT COLOR=#999999>駄文と日記の詰め合わせ。</FONT><br>
-  
-<a href="https://mizutisann.github.io/HP/game"><img alt="粗笨記録"  src="img/home/sohon0.png"  onmouseover="this.src='img/home/sohon1.png'" onmouseout="this.src='img/home/sohon0.png'" border="0" width="256" height="32">
-</a><FONT SIZE=-3 COLOR=#999999>最終更新日：2026年1月3日</FONT><br>
-<FONT COLOR=#999999>雑記以上、記事未満。写真多め。</FONT><br>
-
-<a href="link.html"><img alt="リンク置き場"  src="img/home/link0.png" onmouseover="this.src='img/home/link1.png'" onmouseout="this.src='img/home/link0.png'" border="0" width="256" height="32">
-</a><FONT SIZE=-3 COLOR=#999999>最終更新日：2026年1月3日</FONT><br>
-<FONT COLOR=#999999>リンク置き場。言うほど異的じゃ無い。<br><br>
-<form action="https://odaibako.net/u/mizutisann" method="post" target="_blank"><input type="submit" value="お題箱">エラーが出た場合はリロードしてください。<br></form></FONT>
-<br><hr><br>
-連絡などは各種SNSにてお願いします。<br>
-misskey.io / @mizutisann<br>
-Discord / mizutisann_6806<br>
-Twitter / mizutisann<br>
-<br><hr>
-当ペエジは、横1000pxぐらいで見ることを想定してます。多分。
-<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png width="200" height="40" border="0"><br>
+<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="img/bakg1.png">
+<div align="right"><font size="1" color="aaaaaa">Written in Japanese / 𧃴(Unicode U+270F4)がJIS第3水準の為、環境によっては表示出来ないかも。</font><br><br>
+<div align="center"><a href="home.html"><img alt="飾りバー" src="img/kari.png"><br></a>
+<font size="2"><p>　　　　　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
+<br><br><font size="5">~ 𧃴折り ~</font><br><br>
+<table border="3">
+<tbody><tr><td bgcolor="#060606">
+<font size="5"><center><b>工事中です。</b><br>工事明けは…令和8年の1月には…。</font></td></tr></tbody></table>
+<font size="4">きっとこのペエジは<br>ゲームやPC、車などを扱うホームペエジの<br>トップペエジです。(^^;</font></center><br><br>
+<a href="home.html">HOMEへ</a><br><br><br><br>
+<font size="3" color="aaaaaa"><hr>リンク、ブックマークはなるべくこのページにお願いします。<br>
+<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=img/banner-tuzura.png width="200" height="40" border="0"></font><br>
 </DIV>
 </body>
 </html>
