--- a/zakki2026.html
+++ b/zakki2026.html
@@ -1,11 +1,18 @@
 <html>
 <head>
-  <title>𧃴折り 雑記2025</title>
+  <title>𧃴折り 雑記2026</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="img/bakg1.png">
 <div align="center">
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+ガタピシ車</font><br></td><td align="center" width="200">
+2026年1月25日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+現状、表立って話しては無いが、とある車を直してます…。とだけ。<br>
+ある程度、片が付いたら話そうかな。どうなるか分からんし(^^;
+<br></td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 あけましておめでとうございます</font><br></td><td align="center" width="200">
