--- a/zakki2026.html
+++ b/zakki2026.html
@@ -8,6 +8,13 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+ホムペ改修完了？</font><br></td><td align="center" width="200">
+2026年1月28日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+今までの記事を移植し終えた。これにて無事改修完了！？
+不具合出てないといいな…。
+<br></td></tr></tbody></table><br><br><br>
+  
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 ガタピシ車</font><br></td><td align="center" width="200">
 2026年1月25日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 現状、表立って話しては無いが、とある車を直してます…。とだけ。<br>
