--- a/sohon.html
+++ b/sohon.html
@@ -9,22 +9,22 @@
 
 <h2>麁笨記録　~ 雑記以上、記事未満。</h2>
 
-<br><br><a href="sohon/macransacq.html"><img src="https://mizutisann.github.io/HP/img/pc/oldpc/ap2act2.jpg" border="0" width="320" height="111">
+<br><br><a href="sohon/macransacq.html"><img src="sohon/img/macransacq.jpg" border="0" width="320" height="111">
 マクランサT-3のチョロQを作る</a><br><FONT SIZE=-3 COLOR=#999999>2023年10月</FONT><br>
 
-<br><br><a href="sohon/cafe3cq.html"><img src="https://mizutisann.github.io/HP/img/pc/oldpc/ap2act2.jpg" border="0" width="320" height="111">
+<br><br><a href="sohon/cafe3cq.html"><img src="sohon/img/cafe3cq.jpg" border="0" width="320" height="111">
 カフェイン×3のチョロQを作る。オマケ付き</a><br><FONT SIZE=-3 COLOR=#999999>2023年3月</FONT><br>
 
-<br><br><a href="sohon/ap2act2.html"><img src="https://mizutisann.github.io/HP/img/pc/oldpc/ap2act2.jpg" border="0" width="320" height="111">
+<br><br><a href="sohon/ap2act2.html"><img src="sohon/img/ap2act2.jpg" border="0" width="320" height="111">
 PC-9821Ap2整備する。ACT.2</a><br><FONT SIZE=-3 COLOR=#999999>2023年3月</FONT><br>
 
-<br><br><a href="sohon/ap2act1.html"><img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldap2act1.jpg" border="0" width="320" height="111">
+<br><br><a href="sohon/ap2act1.html"><img src="sohon/img/ap2act1.jpg" border="0" width="320" height="111">
 PC-9821Ap2を弄り壊す。ACT.1</a><br><FONT SIZE=-3 COLOR=#999999>2022年12月</FONT><br>
 
-<br><br><a href="sohon/z32tomicaact1.html"><img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldclassic2act1.jpg" border="0" width="320" height="111">
+<br><br><a href="sohon/z32tomicaact1.html"><img src="sohon/img/z32tomicaact1.jpg" border="0" width="320" height="111">
 Z32のモータートミカを直す。ACT.1</a><br><FONT SIZE=-3 COLOR=#999999>2022年11月</FONT><br>
 
-<br><br><a href="sohon/mc2act1.html"><img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldclassic2act1.jpg" border="0" width="320" height="111">
+<br><br><a href="sohon/mc2act1.html"><img src="sohon/img/mc2act1.jpg" border="0" width="320" height="111">
 Macintosh classic2を直す。ACT.1</a><br><FONT SIZE=-3 COLOR=#999999>2022年10月</FONT><br>
 
 <br><br><br>
