--- a/sohon.html
+++ b/sohon.html
@@ -9,6 +9,9 @@
 
 <h2>麁笨記録　~ 雑記以上、記事未満。</h2>
 
+<br><br><a href="sohon/ehimefuuin26.html"><img src="sohon/img/ehimefuuin26.jpg" border="0" width="320" height="111">
+ナンバープレートの愛媛封印のバリエーション</a><br><FONT SIZE=-3 COLOR=#999999>2026年1月</FONT><br>
+  
 <br><br><a href="sohon/macransacq.html"><img src="sohon/img/macransacq.jpg" border="0" width="320" height="111">
 マクランサT-3のチョロQを作る</a><br><FONT SIZE=-3 COLOR=#999999>2023年10月</FONT><br>
 
@@ -34,3 +37,4 @@ Macintosh classic2を直す。ACT.1</a><br><FONT SIZE=-3 COLOR=#999999>2022年10
 </DIV>
 </body>
 </html>
+
