--- a/sohon/ehimefuuin26.html
+++ b/sohon/ehimefuuin26.html
@@ -21,7 +21,7 @@
 
 <img src="img/ehimefuuin26/DSC_3347.JPG" width="512"><img src="img/ehimefuuin26/DSC_3347s.JPG" width="200"><br>
 『右端』の次に付けられた物が、(恐らく)アルミ製のほぼ同形状の物。『右端』と較べると、封印の淵にエンボスが無いのが特徴。<br>
-便宜上『小径アルミ』と呼ぶ。<br><img src="img/ehimefuuin26/DSC_8389.JPG" width="300"><br>
+<img src="img/ehimefuuin26/DSC_8389.JPG" width="300"><br>
 分類番号2ケタに成りたての頃に次の封印へと変わったと思われる。<br><br><br>
 
 <img src="img/ehimefuuin26/DSC_8376.JPG" width="512"><img src="img/ehimefuuin26/DSC_8378s.JPG" width="200"><br>
@@ -38,7 +38,7 @@
 <img src="img/ehimefuuin26/DSC_1708.JPG" width="512"><img src="img/ehimefuuin26/DSC_9456s.JPG" width="200"><br>
 その次が『真ん中』<br>
 これは今(2026年)でも見ようと思えば見れる。町に居る旧愛媛は、おおよそこの封印。<br>
-新愛媛になってからも、暫くは使われていたっぽい。<br><br><br>
+新愛媛はあまり興味ないので観察していないが、新愛媛＋『真ん中』は結構珍しいかも。<br><br><br>
 
 <img src="img/ehimefuuin26/s-img20260129_07512159.jpg" width="512"><br>
 そして『左端』になる。<br>
@@ -49,4 +49,5 @@
 </DIV>
 </body>
 </html>
+
 
