--- a/zakki2026.html
+++ b/zakki2026.html
@@ -8,6 +8,18 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+推し活</font><br></td><td align="center" width="200">
+2026年2月6日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+最近、よく『推し活』なんて耳にする。私は『推し活』という言葉が嫌いだ。<br>
+商業的意味合いが強い、というのも大きな理由だが…。何というか、狂気が足りない。<br>
+〇〇は俺の嫁～なんて言っていた熱量は何処へ行った？<br>
+推しだなんて生温い事言っているんだったら、みすちーは俺の嫁だぞ。<br>
+…界隈には、『ミスティア・ローレライは俺を妊娠している』と語っている人が居たわ…。<br>
+一般人からは狂人扱いされ、上には上が居る。<br>
+中途半端なオタクとして今日も生きていくのであった。
+<br></td></tr></tbody></table><br><br><br>
+  
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 ホムペ改修完了？</font><br></td><td align="center" width="200">
 2026年1月28日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 今までの記事を移植し終えた。これにて無事改修完了！？<br>
